<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:padding="5dip"
            android:src="@mipmap/icon_photo" />

        <TextView
            android:id="@+id/setting_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:padding="5dip"
            android:text="@string/app_user_temp"
            android:textColor="#444444"
            android:textSize="14dip" />

        <LinearLayout
            android:id="@+id/layout_setting_setting_layout"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:src="@mipmap/icon_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_setting"
                android:textColor="#88444444"
                android:textSize="10dip" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_line2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="10dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_total_revenue"
                android:textColor="#88444444"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/setting_total_revenue_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#88444444"
                android:textSize="12dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_total_expenses"
                android:textColor="#88444444"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/setting_total_expenses_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#88444444"
                android:textSize="12dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_total_balance"
                android:textColor="#88444444"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/setting_total_balance_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#88444444"
                android:textSize="12dip" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_line3" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/setting_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dip" />
</LinearLayout>