<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_account_type_back_btn"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background"
            android:padding="15dip"
            android:src="@mipmap/icon_close_aeaeae" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_add_account_type_title"
            android:textColor="#444444"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/add_account_type_finish"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background"
            android:gravity="center"
            android:text="@string/string_finish"
            android:textColor="#fa9b3d"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_gravity="bottom"
        android:background="@color/color_line1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dip">

        <ImageView
            android:id="@+id/add_account_type_img"
            android:layout_width="match_parent"
            android:layout_height="36dip"
            android:layout_weight="5"
            android:src="@mipmap/icon_star" />

        <EditText
            android:id="@+id/add_account_type_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="start|center_vertical"
            android:hint="@string/string_add_account_type_hint"
            android:maxLength="10"
            android:padding="10dip"
            android:textColor="#444444"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_gravity="bottom"
        android:background="@color/color_line1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_account_type_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

</LinearLayout>