<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/dialog_account_add_btn_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:gravity="center"
                    android:hint="@string/string_account_add_text_hint"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="#44444444" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/dialog_account_add_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="68dip"
                    android:padding="10dip" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="#44444444" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dialog_account_add_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/string_btn_cancel" />

                    <View
                        android:layout_width="1dip"
                        android:layout_height="match_parent"
                        android:background="#44444444" />

                    <TextView
                        android:id="@+id/dialog_account_add_btn_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/string_btn_ok" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>