<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip">

        <ImageView
            android:id="@+id/layout_account_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="15dip"
            android:src="@mipmap/icon_close_aeaeae" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/string_revenue"
                android:textColor="@color/color_aa444444" />

            <View
                android:layout_width="1dip"
                android:layout_height="20dip"
                android:background="@color/color_aeaeae" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/string_expenses"
                android:textColor="@color/color_aa444444" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#b3af40"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:padding="5dip"
            android:src="@mipmap/icon_star_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/string_account_type_common"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="￥"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/layout_accounting_text_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:text="0.00"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/layout_accounting_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:gravity="center_horizontal"
            android:text="2016\n今天"
            android:textColor="@color/color_line"
            android:textSize="10dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginRight="10dip"
            android:src="@mipmap/icon_input" />
    </LinearLayout>

    <com.dragon.accounts.view.CalculatorView
        android:id="@+id/layout_accounting_calculator_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>