<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip">

        <ImageView
            android:id="@+id/layout_account_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_background"
            android:padding="15dip"
            android:src="@mipmap/icon_close_aeaeae" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/layout_accounting_btn_revenue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/string_revenue"
                android:textColor="@color/color_layout_accounting_btn_selected" />

            <View
                android:layout_width="1dip"
                android:layout_height="20dip"
                android:background="@color/color_aeaeae" />

            <TextView
                android:id="@+id/layout_accounting_btn_expenses"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/string_expenses"
                android:textColor="@color/color_layout_accounting_btn_selected" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#b3af40"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/layout_accounting_icon_img"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:padding="5dip"
            android:src="@mipmap/icon_star_white" />

        <TextView
            android:id="@+id/layout_accounting_icon_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/string_account_type_common"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="￥"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/layout_accounting_text_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:text="0.00"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/layout_accounting_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#88ededed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_accounting_date_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dip"
            android:paddingRight="16dip">

            <TextView
                android:id="@+id/layout_accounting_date_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_aa444444"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/layout_accounting_date_mount_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_aa444444"
                android:textSize="12dip" />

        </LinearLayout>

        <TextView
            android:id="@+id/layout_accounting_date_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/string_accounting_content_hint"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:singleLine="true"
            android:textColor="@color/color_aa444444"
            android:textColorHint="#44444444"
            android:textSize="14dip" />

        <ImageView
            android:id="@+id/layout_accounting_date_content_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:src="@mipmap/icon_input" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#44ededed" />

    <com.dragon.accounts.view.CalculatorView
        android:id="@+id/layout_accounting_calculator_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>